--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <!-- navigation -->
         <header>
             <h1>
-                <a href="/">RUN BUDDY</a>
+                <a href="index.html">RUN BUDDY</a>
             </h1>
             <nav>
                 <!-- Unordered eist element -->
@@ -53,6 +54,10 @@
         <!-- footer -->
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
+            <div>
+                <a href="#">Read Our Privacy Policy</a><br />
+                &copy; 2019 Run Buddy, Inc.
+            </div>
         </footer>
     </body>
 </html>
