--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="hero">
             <div class="hero-form">
                 <h3>Get Started Today</h3>
-                <p>Fill out this form and one of our trainers will schedule a consult</p>
+                <p>Fill out this form and one of our trainers will schedule a consult.</p>
                 <!-- Add form element -->
                 <form>
                     <label for="name">Enter full name:</label>
@@ -73,50 +73,90 @@
         <!-- End Hero -->
 
         <!-- "what we do" section -->
-        <section id="what-we-do">
-            <h2>What we do</h2>
+        <section id="what-we-do" class="intro">
+            <h2 class="section-title primary-border">What we do</h2>
             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aspernatur sint cum iste odit ipsa non commodi saepe! Optio repellendus nihil magnam ipsum iste! Vitae suscipit obcaecati harum! Ab, possimus?
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia maxime maiores voluptatem animi sunt quos et libero, hic asperiores, modi molestiae explicabo magni? Rerum, voluptas ex. Quis consequatur repellendus sed!
             </p>
         </section>
 
         <!-- "what you do" section -->
-        <section id="what-you-do">
-            <h2>What You Do</h2>
+        <section id="what-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <!-- insert this img element -->
                 <img src="./assets/images/step-1.svg" alt=""/>
-                <h3>Step 1: Fill Out the Form Above.</h3>
+                <h3>Step 1: <span> Fill Out the Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="assets/images/step-2.svg" alt=""/>
-                <h3>Step 2: Consult with One of Our Trainers.</h3>
+                <h3>Step 2: <span> Consult with One of Our Trainers.</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
                 <img src="assets/images/step-3.svg" alt=""/>
-                <h3>Step 3: Get Running</h3>
+                <h3>Step 3: <span> Get Running</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan</p>
             </div>
 
             <div>
                 <img src="assets/images/step-4.svg" alt=""/>
-                <h3>Step 4: See Results</h3>
+                <h3>Step 4: <span> See Results</span></h3>
                 <p>Bi-weekly check-ins with your trainer will keep you focused</p>
             </div>
         </section>
 
         <!-- "meet the trainers" section -->
-        <section>
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet the Trainers
+            </h2>
         </section>
 
+        <!-- first trainer bio -->
+        <article class="trainer">
+            <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ratione iste sint fugit esse cupiditate assumenda laudantium? Nam, at. Eum neque voluptas sunt aliquid hic quas beatae veniam eos cum!
+                </p>
+            </div>
+        </article>
+
+        <!-- second trainer bio -->
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque odit adipisci laboriosam delectus! Hic, voluptate similique. Ipsa illum laborum reprehenderit cum. Unde, quasi fugit nemo sint est officiis dolor commodi!
+                </p>
+            </div>
+            <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+        </article>
+
+        <!-- third trainer bio -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+              <h3>Harry "the Headband" Smith</h3>
+              <h4>Strength</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+              </p>
+            </div>
+        </article>
+
         <!-- "reach out" section -->
-        <section>
+        <section id="reach-out">
             <h2>Reach Out</h2>
         </section>
 
