--- a/index.html
+++ b/index.html
@@ -171,15 +171,6 @@
                 Reach Out
             </h2>
             <div class="contact-info">
-                <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
-                    frameborder="0"
-                    height="400"
-                    width="400"
-                    style="border:0"
-                    allowfullscreen
-                >
-                </iframe>
                 <div>
                     <h3>Run Buddy</h3>
                     <p>
@@ -195,6 +186,22 @@
                         E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                     </address>
                 </div>
+
+                <form>
+                    <h3>Contact Us</h3>
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
+                    <input type="text" placeholder="Message" name="message" class="form-input" />
+                    <button>Submit</button>
+                </form>
+
+                <iframe>
+                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+                    frameborder="0"
+                    height="400"
+                    width="400"
+                    style="border:0"
+                    allowfullscreen
+                </iframe>
             </div>
         </section>
 
