--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
+            
+            <!-- Call to Action CTA-->
             <div class="hero-cta">
                 <h2>Start Building Habits.</h2>
                 <p>
@@ -44,6 +46,7 @@
                   probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
                 </p>
             </div>
+
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult.</p>
