--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <!-- navigation -->
+
         <header>
-            <h1>
-                <a href="index.html">RUN BUDDY</a>
-            </h1>
+
+            <!-- navigation-->
             <nav>
-                <!-- Unordered eist element -->
                 <ul>
-                    <!-- List item element -->
                     <li>
-                        <!-- Anchor element-->
                         <a href="#what-we-do">What We Do</a>
                     </li>
                     <li>
@@ -110,7 +106,7 @@
                 <h3>Step 1.</h3>
                 <div class="step-info">
                   <div class="step-img">
-                    <img src="/assets/images/step-1.svg" alt="" />
+                    <img src="./assets/images/step-1.svg" alt="" />
                   </div>
                   <div class="step-text">
                     <h4>Fill Out The Form Above</h4>
@@ -123,7 +119,7 @@
                 <h3>Step 2.</h3>
                 <div class="step-info">
                     <div class="step-img">
-                      <img src="/assets/images/step-2.svg" alt="" />
+                      <img src="./assets/images/step-2.svg" alt="" />
                     </div>
                     <div class="step-text">
                         <h4>Consult with One of Our Trainers.</h4>
@@ -136,7 +132,7 @@
                 <h3>Step 3.</h3>
                 <div class="step-info">
                     <div class="step-img">
-                      <img src="/assets/images/step-3.svg" alt="" />
+                      <img src="./assets/images/step-3.svg" alt="" />
                     </div>
                     <div class="step-text">
                         <h4>Get Running</h4>
@@ -149,7 +145,7 @@
                 <h3>Step 4.</h3>
                 <div class="step-info">
                     <div class="step-img">
-                      <img src="/assets/images/step-4.svg" alt="" />
+                      <img src="./assets/images/step-4.svg" alt="" />
                     </div>
                     <div class="step-text">
                         <h4>See Results</h4>
