--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
         <header>
 
+            <h1>
+                <a>RUN BUDDY</a>
+            </h1>
+
             <!-- navigation-->
             <nav>
                 <ul>
