--- a/index.html
+++ b/index.html
@@ -68,19 +68,21 @@
                     <!-- Radio button -->
                     <p>
                         Have you worked out with a trainer before?
-                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                        <label for="trainer-yes">Yes</label>
-                        <input type="radio" name="trainer-confirm" id="trainer-no" />
-                        <label for="trainer-no">No</label>
-                    </p>
-
-                    <!-- Checkbox -->
-                    <p>
-                        <label>
-                            I acknowledge that I am at least 18 years of age.
-                            <input type="checkbox" name="age-check" id="age-yes" />
-                        </label>
-                    </p>
+                        <span class="radio-wrapper">
+                          <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                          <label for="trainer-yes">Yes</label>
+                        </span>
+                        <span class="radio-wrapper">
+                          <input type="radio" name="trainer-confirm" id="trainer-no" />
+                          <label for="trainer-no">No</label>
+                        </span>
+                      </p>
+                      <p>
+                        <span class="checkbox-wrapper">
+                          <input type="checkbox" name="age-confirm" id="checkbox" />
+                          <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+                        </span>
+                      </p>
 
                     <!-- Submit button -->
                     <button type="submit">
