--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
 
         <!-- hero/jumbotron -->
         <section class="hero">
-
             <!-- Call to Action CTA-->
             <div class="hero-cta">
-                <div class ="flex-row">
                     <h2>Start Building Habits.</h2>
                     <p>
                         seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it
@@ -176,40 +174,54 @@
         <div class="trainers">
             <!-- first trainer bio -->
             <article class="trainer">
-                <img src="assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-img trainer-1">
+                    <div>
+                        <h3>Arron Stephens</h3>
+                        <h4>Speed / Strength</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
-                    <h3 class="trainer-name">Arron Stephens</h3>
-                    <h4 class="trainer-role">Speed / Strength</h4>
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam ratione iste sint fugit esse cupiditate assumenda laudantium? Nam, at. Eum neque voluptas sunt aliquid hic quas beatae veniam eos cum!
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
-            </article>
+              </article>
 
             <!-- second trainer bio -->
             <article class="trainer">
-                <img src="assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout">
+                <div class="trainer-img trainer-2">
+                    <div>
+                        <h3>Joanna Gill</h3>
+                        <h4>Endurance</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
-                    <h3 class="trainer-name">Joanna Gill</h3>
-                    <h4 class="trainer-role">Endurance</h4>
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque odit adipisci laboriosam delectus! Hic, voluptate similique. Ipsa illum laborum reprehenderit cum. Unde, quasi fugit nemo sint est officiis dolor commodi!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
-            </article>
+              </article>
 
             <!-- third trainer bio -->
             <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-img trainer-3">
+                    <div>
+                        <h3>Harry "the Headband" Smith</h3>
+                        <h4>Strength</h4>
+                    </div>
+                </div>
                 <div class="trainer-bio">
-                    <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-                    <h4 class="trainer-role">Strength</h4>
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                     </p>
                 </div>
-            </article>
+              </article>
         </div>
 
         <!-- Grid Container -->
